# Lab3_opp

./: .gitignore
3.1/: CMakeCache.txt  CMakeLists.txt  Lab3.1_test.cpp  Makefile  Time.cpp  Time.h  Triad.cpp  Triad.h  a.out  cmake_install.cmake  main.cpp
3.2/: ColoredPoint.cpp  ColoredPoint.h  Point.cpp  Point.h  a.out  main.cpp
3.3A/: CMakeCache.txt  CMakeLists.txt  Lab3.3_test.cpp  Makefile  Point.cpp  Point.h  a.out  cmake_install.cmake  incDecPoint.cpp  incDecPoint.h  main.cpp  opPoint.cpp  opPoint.h
3.3B/: CMakeCache.txt  CMakeLists.txt  Lab3.3_test.cpp  Makefile  Pair.cpp  Pair.h  Point.cpp  Point.h  a.out  cmake_install.cmake  main.cpp
3.3C/: CMakeCache.txt  CMakeLists.txt  Makefile  Object.h  Point.cpp  Point.h  a.out  cmake_install.cmake  main.cpp
3.3D/: Time.cpp  Triad.h  a.out  main.cpp
3.3E/: CMakeLists.txt  Object.cpp  Object.h  Time.h  Triad.cpp  Triad.h  a.out  main.cpp
3.6/: B1.h  B2.h  D1.h  D2.h  D3.h  a.out  main  main.cpp
